--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,9 @@
    http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 	<display-name>Spring MVC Application</display-name>
-
+	<!-- <welcome-file-list>
+        <welcome-file>/WEB-INF/pages/home.jsp</welcome-file>
+    </welcome-file-list> -->
 	<!-- Spring Dispatch Servlet and Mapping-->
 	<servlet>
       <servlet-name>SpringWeb</servlet-name>
